# congruity

./: .gitignore  NOTICE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: main.yml  pr.yaml  python-publish.yml  release.yaml  worker.yaml
congruity/: __init__.py  json_conversion.py  patch.py  rdd_adapter.py  spark_context_adapter.py
congruity/helper/: __init__.py  patch.py  rdd.py
dev/: .rat-excludes  lint-python
tests/: conftest.py  test_json_conversion.py  test_public_interface.py  test_rdd_adapter.py
