[tool.poetry]
name = "congruity"
version = "0.0.1"
description = ""
authors = ["Matthew Powers <matthewkevinpowers@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.group.test.dependencies]
pytest = "^7"
chispa = "0.9.4"
pytest-describe = "^2"
pyspark = {extras = ["connect"], version = "3.5.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
