# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements. See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "spark-congruity"
version = "0.0.1"
description = ""
authors = ["Matthew Powers <matthewkevinpowers@gmail.com>", "Martin Grund <martin@databricks.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/databricks/congruity"
repository = "https://github.com/databricks/congruity"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "License :: OSI Approved",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
]
packages = [
    { include = "congruity", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.group.test.dependencies]
pytest = "^7"
chispa = "0.9.4"
pytest-describe = "^2"
pyspark = {extras = ["connect"], version = "3.5.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# When changing the version, we have to update
# GitHub workflow version and dev/reformat-python
required-version = "23.9.1"
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = 'cloudpickle|error_classes.py'
